--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,14 @@
     background-attachment: fixed;
   }
 
-  .bg-hero{
+  .bg-hero {
     background: url("./img/warehouse.jpg") no-repeat;
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
   }
 
-  .bg-silos{
+  .bg-silos {
     background: url("./img/Chemical-Silos.jpg") no-repeat;
     background-position: center;
     background-size: cover;
@@ -86,6 +86,15 @@ body::-webkit-scrollbar {
 .montserrat {
   font-family: "Montserrat", sans-serif;
   font-weight: 100;
+}
+
+.hide-scroll-bar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.hide-scroll-bar::-webkit-scrollbar {
+  display: none;
 }
 
 body {
